--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,5 +3,30 @@
 
   .homeContainer{
     flex: 6;
+
+    .widgets{
+      width: 100%;
+      display: flex;
+      padding: 2rem;
+      gap: 2rem;
+    }
+  }
+
+}
+
+@media(max-width:46em){
+  .home{
+    
+    .homeContainer{
+  
+      .widgets{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 2rem;
+        gap: 2rem;
+      }
+    }
+  
   }
 }
