--- a/src/pages/components/navbar/navbar.scss
+++ b/src/pages/components/navbar/navbar.scss
@@ -144,6 +144,7 @@
 
     .mobile{
         display: flex;
+        width: 100%;
         align-items: center;
         justify-content: space-between;
         padding: 2rem;
@@ -183,7 +184,7 @@
 
         .mobile-nav{
             width: 50vw;
-            height: 100vh;
+            height: 100%;
             backdrop-filter: blur(10px);
             background-color: rgba(25, 24, 24, 0.937);
             position: fixed;
