--- a/src/pages/components/widget/widget.scss
+++ b/src/pages/components/widget/widget.scss
@@ -27,6 +27,7 @@
         width: max-content;
         font-size: 1.3rem;
         border-bottom: 1px solid gray;
+        cursor: pointer;
     }
 
     .percentage{
