--- a/src/pages/components/widget/widget.scss
+++ b/src/pages/components/widget/widget.scss
@@ -52,3 +52,30 @@
       align-self: flex-end;
    }
 }
+
+@media(max-width:68em){
+    .widget{
+        .left,.right{
+        
+     
+         .title{
+             font-size: 1.3rem;    
+         }
+     
+         .counter{
+             font-size: 2rem;
+         }
+     
+         .link{
+             font-size: 1.1rem;      
+         }
+     
+         .percentage{ 
+             font-size: 1.2rem;
+         }
+        }
+        .icon{
+           font-size: 2.3rem;
+        }
+     }
+}
