--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -21,12 +21,24 @@
 
 }
 
+@media(max-width:68em){
+  .home{
+    .homeContainer{
+      main {
+      .charts{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+       }
+     }
+   } 
+ }
+}
+
 
 @media(max-width:46em){
   .home{
-    
     .homeContainer{
-  
       main {
       .widgets{
         width: 100%;
