--- a/src/pages/components/navbar/navbar.scss
+++ b/src/pages/components/navbar/navbar.scss
@@ -184,7 +184,7 @@
 
         .mobile-nav{
             width: 50vw;
-            height: 100%;
+            height: 100vh;
             backdrop-filter: blur(10px);
             background-color: rgba(25, 24, 24, 0.937);
             position: fixed;
