--- a/src/pages/components/datatable/data-table.scss
+++ b/src/pages/components/datatable/data-table.scss
@@ -2,6 +2,26 @@
     height: 32vw;
     padding: 2rem;
 
+    .dataTableTitle {
+        width: 100%;
+        font-size: 2.4rem;
+        color: gray;
+        margin-bottom: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .link {
+            text-decoration: none;
+            color: green;
+            font-size: 1.6rem;
+            font-weight: 400;
+            border: 1px solid green;
+            padding: 5px;
+            cursor: pointer;
+        }
+    }
+
     .dataGrid {
         font-size: 1.5rem;
 
@@ -14,35 +34,34 @@
                 height: 3.2rem;
                 object-fit: cover;
                 margin-right: 2rem;
-            }  
+            }
         }
 
-        .cellWithStatus{
+        .cellWithStatus {
             padding: 0.5rem;
             border-radius: 0.5rem;
-            
 
-            &.active{
+            &.active {
                 color: green;
-                background-color:  rgba(0, 128, 0, 0.05);
+                background-color: rgba(0, 128, 0, 0.05);
             }
 
-            &.passive{
+            &.passive {
                 color: red;
-                background-color:  rgba(255, 0, 0, 0.05);
+                background-color: rgba(255, 0, 0, 0.05);
             }
 
-            &.pending{
+            &.pending {
                 color: goldenrod;
-                background-color:  rgba(255, 217, 0, 0.05);
+                background-color: rgba(255, 217, 0, 0.05);
             }
         }
-        .cellAction{
+        .cellAction {
             display: flex;
             align-items: center;
             gap: 1.5rem;
 
-            .viewButton{
+            .viewButton {
                 padding: 2px 5px;
                 border-radius: 5px;
                 color: darkblue;
@@ -50,7 +69,7 @@
                 cursor: pointer;
             }
 
-            .deleteButton{
+            .deleteButton {
                 padding: 2px 5px;
                 border-radius: 5px;
                 color: crimson;
@@ -59,37 +78,37 @@
             }
         }
     }
-
-   
 }
 
-@media(max-width:68em){
-    .dataTable{
+@media (max-width: 68em) {
+    .dataTable {
         height: 50vh;
+
+        .dataTableTitle{
+            font-size: 2rem;
+
+            .link{
+                font-size: 1.4rem;
+            }
+        }
         .dataGrid {
             font-size: 1.4rem;
             color: gray;
         }
+    }
+}
 
-       }
-    
-  }
-
-
-
-@media(max-width:46em){
-    .dataTable{
+@media (max-width: 46em) {
+    .dataTable {
         height: 50vh;
 
         .dataGrid {
             font-size: 1.4rem;
             color: gray;
         }
-
-       }
-       .empty{
+    }
+    .empty {
         height: 46vh;
         width: 100%;
     }
-    
-  }
+}
