--- a/src/pages/components/sidebar/sidebar.scss
+++ b/src/pages/components/sidebar/sidebar.scss
@@ -32,7 +32,7 @@
            
             
             .title{
-                font-size: 1.2rem;
+                font-size: 1.3rem;
                 font-weight: bold;
                 color: #999;
                 margin-top: 1.5rem;
@@ -43,6 +43,7 @@
             li{
                 display: flex;
                 align-items: center;
+                margin-bottom: 1.4rem;
               
                 padding: 0.5rem;
                 cursor: pointer;
